--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,14 @@
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
+        "ibrahimtelman/voyager-excel-export": "^1.0",
+        "larapack/voyager-hooks": "^1.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "tcg/voyager": "^1.7"
+        "maatwebsite/excel": "^3.1",
+        "tcg/voyager": "^1.7",
+        "tu6ge/voyager-excel": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
